--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,16 @@
     "authors": [
         {
             "name": "Shannon Weyrick",
-            "email": "sweyrick@nsone.net",
+            "email": "sweyrick@nsone.net"
         }
     ],
     "support": {
-        "issues": "https://github.com/nsone/nsone-php/issues"
+        "issues": "https://github.com/nsone/nsone-php/issues",
         "source": "https://github.com/nsone/nsone-php"
     },
     "require": {
         "php": ">=5.4.0",
-        "guzzle/guzzle": ">=3.7.0,<=3.9.9"
+        "guzzlehttp/guzzle": "4.*"
     },
 
     "suggest": { 
@@ -29,9 +29,12 @@
         }
     },
     "autoload-dev": {
-        "phpunit/phpunit": "4.*"
+        "psr-4": {
+            "NSONE\\Tests\\": "tests/"
+        }
     },
     "require-dev": {
+        "phpunit/phpunit": "4.*"
     },
     "extra": {
     }
