--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "source": "https://github.com/nsone/nsone-php"
     },
     "require": {
-        "php": ">=5.4.0",
-        "guzzlehttp/guzzle": "4.*"
+        "php": ">=5.3.3",
+        "ext-curl": "*"
     },
 
     "suggest": { 
@@ -34,7 +34,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*"
+        "phpunit/phpunit": "*"
     },
     "extra": {
     }
