--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit bootstrap="./tests/bootstrap.php"
-         colors="true">
+<phpunit
+        backupGlobals="false"
+        backupStaticAttributes="false"
+        bootstrap="./tests/bootstrap.php"
+        colors="true"
+        convertErrorsToExceptions="true"
+        convertNoticesToExceptions="false"
+        convertWarningsToExceptions="false"
+        processIsolation="false"
+        stopOnFailure="false"
+        syntaxCheck="false"
+>
   <testsuites>
     <testsuite>
       <directory>tests</directory>
     </testsuite>
   </testsuites>
   <filter>
-    <whitelist>
+    <whitelist addUncoveredFilesFromWhitelist="true">
+      <exclude>
+        <file>src/load_nsone.php</file>
+      </exclude>
       <directory suffix=".php">src</directory>
     </whitelist>
   </filter>
+<php>
+  <includePath>tests</includePath>
+</php>
 </phpunit>
